macros/tests/since/fail/invalid_date.rs
#[openraft_macros::since(version = "1.0.0", date = "2021-01--")]
fn main() {}
